# oauth2-slack-fastapi-integration

./: .env.sample  .gitignore  README.md  conftest.py  docker-compose.dev.yml  main.py  pyproject.toml
app/api/: slack.py
app/config/: slack_config.py
app/schemas/: slack_schemas.py
app/utils/: dependencies.py  slack_utils.py
docker/dev/: Dockerfile
tests/: test_apis.py  test_utils.py
